# tesela

./: CMakeLists.txt  README.md
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  doxygen_defs.hpp
example/: CMakeLists.txt  basic_enhancing.cpp  converter.cpp  gaussian_blur.cpp  image_crop.cpp  literals.cpp  plasma.cpp
examples/: Makefile  README.md  basic_enhancing.cpp  converter.cpp  gaussian_blur.cpp  image_crop.cpp  plasma.cpp  pseudo_pop_art.cpp
include/cynodelic/tesela/: color_space.hpp  config.hpp  convert.hpp  filters.hpp  ga_types.hpp  gray_types.hpp  image_io.hpp  image_types.hpp  internal.hpp  literals.hpp  pixelwise.hpp  point.hpp  rectangle.hpp  rgb_types.hpp  rgba_types.hpp  tdouble.hpp  tesela.hpp  tesela_all.hpp  transform.hpp  type_casts.hpp  types.hpp
include/cynodelic/tesela/detail/: literals_helpers.hpp  tdouble_ops.hpp  type_cast_helpers.hpp  utils.hpp  void_t.hpp
include/cynodelic/tesela/exceptions/: io_error.hpp
include/cynodelic/tesela/formats/: jpeg_fmt.hpp  jpeg_io.hpp  png_fmt.hpp  png_io.hpp  tiff_fmt.hpp  tiff_io.hpp
include/cynodelic/tesela/traits/: has_alpha.hpp  has_rgb_components.hpp  integral_form_of.hpp  is_grayscale.hpp  is_image_format_io.hpp  is_normalized.hpp  is_pixel_type.hpp  normalized_form_of.hpp  with_alpha_form.hpp  without_alpha_form.hpp
include/cynodelic/tesela/traits/detail/: has_valid_read_write.hpp
include/cynodelic/tesela/types/: image_types.hpp  misc_types.hpp  rgba_types.hpp
include/cynodelic/tesela/utilities/convert/: convert_to_grayscale.hpp  remove_alpha.hpp
include/cynodelic/tesela/utilities/filters/: brightness.hpp  contrast.hpp  duotone.hpp  gamma.hpp  gaussian_blur.hpp  invert.hpp  monochrome.hpp  scatter.hpp
include/cynodelic/tesela/utilities/transformations/: crop.hpp  flip.hpp  scale.hpp
include/cynodelic/tesela/utilities/transformations/detail/: pix_citp_2d.hpp  pix_lerp_2d.hpp
test/: CMakeLists.txt
test/core/: CMakeLists.txt  basic_image_copy.hpp  basic_image_equals.hpp  basic_image_initialization.hpp  basic_image_iterator.hpp  basic_image_move.hpp  basic_image_not_equals.hpp  basic_image_reverse_iterator.hpp  basic_image_swap.hpp  core_traits.hpp  ga_t_comparisons.hpp  ga_t_copy.hpp  ga_t_initialization.hpp  ga_t_stream.hpp  ga_t_swap.hpp  gray_t_comparisons.hpp  gray_t_copy.hpp  gray_t_initialization.hpp  gray_t_stream.hpp  gray_t_swap.hpp  image_cast.hpp  literals.hpp  main.cpp  nga_t_comparisons.hpp  nga_t_copy.hpp  nga_t_initialization.hpp  nga_t_stream.hpp  nga_t_swap.hpp  ngray_t_comparisons.hpp  ngray_t_copy.hpp  ngray_t_initialization.hpp  ngray_t_stream.hpp  ngray_t_swap.hpp  nrgb_t_comparisons.hpp  nrgb_t_copy.hpp  nrgb_t_initialization.hpp  nrgb_t_stream.hpp  nrgb_t_swap.hpp  nrgba_t_comparisons.hpp  nrgba_t_copy.hpp  (+31 more)
test/filters/: CMakeLists.txt  invert.hpp  invert_selective.hpp  main.cpp
test/io/: CMakeLists.txt  ga_test_pixels.hpp  gray_test_pixels.hpp  io_traits.hpp  jpeg_input.hpp  main.cpp  png_input.hpp  rgb_test_pixels.hpp  rgba_test_pixels.hpp  tiff_input.hpp
test/io/data/: tiff_ga_test.tif  tiff_gray_test.tif  tiff_rgb_test.tif  tiff_rgba_test.tif
test/transformations/: CMakeLists.txt  bilinear_expected.hpp  cosine_expected.hpp  crop.hpp  flip.hpp  main.cpp  nearest_neighbour_expected.hpp  scale_bilinear.hpp  scale_cosine.hpp  scale_nearest_neighbour.hpp
